--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<a href="#" class="nav_link">Our Product</a>
 				</li>
 				<li class="nav_item">
-					<a href="#" class="nav_link">Contact</a>
+					<a href="#" class="nav_link">Conta</a>
 				</li>
 			</ul>
 			
